update post API

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <form id="form" method="post" enctype="multipart/form-data" action="http://localhost:3100/test">
+    <form id="form" method="post" enctype="multipart/form-data" action="http://localhost:3100/test/route1">
       <label for="avatar">File</label>
       <input type="file" id="avatar" name="avatar" />
       <input type="submit" />
