update API upload

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       <input type="submit" />
     </form>
     <button id="button">Get Image</button>
-    <img id="image" src="data:image/png;base64," />
+    <img
+      id="image"
+      src="https://firebasestorage.googleapis.com/v0/b/vacation-social-media.appspot.com/o/1688027009297-751080%2Fanime-kawaii-girl.jpg?alt=media&token=23ea07f5-1214-49d7-9b3f-30c248e52992"
+    />
 
     <script>
       const button = document.getElementById('button');
