--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,16 @@
     </style>
   </head>
   <body>
-    <form id="form" method="post" enctype="multipart/form-data" action="http://localhost:3100/test">
+    <form id="form" method="post" enctype="multipart/form-data" action="http://localhost:3100/test/route1">
       <label for="avatar">File</label>
       <input type="file" id="avatar" name="avatar" />
       <input type="submit" />
     </form>
     <button id="button">Get Image</button>
-    <img id="image" src="data:image/png;base64," />
+    <img
+      id="image"
+      src="https://firebasestorage.googleapis.com/v0/b/vacation-social-media.appspot.com/o/1688027009297-751080%2Fanime-kawaii-girl.jpg?alt=media&token=23ea07f5-1214-49d7-9b3f-30c248e52992"
+    />
 
     <script>
       const button = document.getElementById('button');
