--- a/public/verify/fail.html
+++ b/public/verify/fail.html
@@ -211,7 +211,7 @@
 
         <div class="bottomHalf">
           <p>There is some error occurs, please contact us to solve problem</p>
-          <a href="https://https-github-com-trunghieult-demo.vercel.app/register" target="_blank" id="alertMO">Moving On</a>
+          <a href="https://seen-six.vercel.app/login" target="_blank" id="alertMO">Moving On</a>
         </div>
       </div>
     </div>
