--- a/public/verify/success.html
+++ b/public/verify/success.html
@@ -208,7 +208,7 @@
 
         <div class="bottomHalf">
           <p>Well Done!, your account has just been created</p>
-          <a href="https://seen-six.vercel.app/login" target="_blank" id="alertMO">Moving On</a>
+          <a href="http://localhost:3000/login" target="_blank" id="alertMO">Moving On</a>
         </div>
       </div>
     </div>
